# QuantDesk

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/agents/: data-engineer.md  risk-engineer.md  technical-engineer.md
.github/workflows/: ci.yml
adapters/: base.py  chip_adapter.py  cross_market_adapter.py  fred_adapter.py  fundamental_adapter.py  fx_adapter.py  macro_adapter.py  news_adapter.py  options_adapter.py  price_adapter.py
agents/: chip_agent.py  cross_market_agent.py  debate_agents.py  fundamental_agent.py  macro_agent.py  news_agent.py  risk_agent.py  technical_agent.py  verifier.py
agents/risk/: aggregation.py  binomial_tree.py  black_scholes.py  position_loader.py  pricing_router.py  scenario.py
api/: main.py
config/: positions.yaml
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/components/: AgentCard.tsx  DebatePanel.tsx  PipelineProgress.tsx  RouterCard.tsx  SupervisorCard.tsx
dashboard/src/hooks/: useAnalysis.ts
docs/: PROGRESS.md  rag_spec.md  refactor_plan.md  spec.md
docs/tasks/: phase_0.md  phase_1.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md  phase_5_supervisor_design.md  phase_6.md
observability/: __init__.py  langfuse_setup.py
router/: intent_router.py
schemas/: agent_signal.py  debate.py  domain_report.py
scripts/: _demo_fixtures.py  demo_agentic_pipeline.py  demo_full_pipeline.py  demo_langfuse_smoke.py  verify_phase2_aggregation.py
supervisor/: graph.py  signal.py  synthesis.py
tests/: conftest.py  test_fundamental_adapter.py  test_fundamental_adapter_integration.py  test_phase0.py  test_phase1c.py  test_phase2_adapter.py  test_phase2_aggregation.py  test_phase2_positions.py  test_phase2_pricing.py  test_phase2_risk_agent.py  test_phase2_scenario.py  test_phase3_crossmarket.py  test_phase3_technical.py  test_phase4_macro.py  test_phase4_news.py  test_phase5_supervisor.py  test_phase7_agentic.py  test_phase9_debate.py  test_phase9_supervisor_synthesis.py
