[project]
name = "quantdesk"
version = "0.1.0"
description = "多智能體量化研究桌系統"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "langgraph>=0.2",
    "financial-reports",
    "financial-agent",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: hits real SQLiteStore / filesystem; run with: uv run pytest -m integration",
]

[tool.ruff]
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schemas", "adapters", "supervisor", "agents"]

[tool.uv.sources]
financial-reports = { path = "../FinancialReports", editable = true }
financial-agent = { path = "../Financial_Agent", editable = true }
