[project]
name = "quantdesk"
version = "0.1.0"
description = "多智能體量化研究桌系統"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "langgraph>=0.2",
    "scipy>=1.17.1",
    "numpy>=2.4.6",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "yfinance>=1.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["schemas", "adapters", "supervisor", "agents"]
