[project]
name = "quantdesk"
version = "0.1.0"
description = "多智能體量化研究桌系統"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "langgraph>=0.2",
    "scipy>=1.17.1",
    "numpy>=2.4.6",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "yfinance>=1.5.1",
    "financial-reports",
    "financial-agent",
    "pandas>=3.0.3",
]
[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml>=6.0.12.20260518",
]
[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: hits real SQLiteStore / filesystem; run with: uv run pytest -m integration",
]
[tool.ruff]
target-version = "py311"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["schemas", "adapters", "supervisor", "agents"]
[tool.uv.sources]
financial-reports = { path = "../FinancialReports", editable = true }
financial-agent = { path = "../Financial_Agent", editable = true }
